--- a/index.html
+++ b/index.html
@@ -19,30 +19,10 @@
 <head></head>
 
 <body>
-  <div class="header">
-    <div class="sky">
-      <div class="deep_sky"></div>
-    </div>
-    <div class="title">winter island</div>
-    <div class="c1">
-      <div class="cloud"></div>
-    </div>
-    <div class="c2">
-      <div class="cloud"></div>
-    </div>
-    <div class="c3">
-      <div class="cloud"></div>
-    </div>
-    <div class="mountain_a"></div>
-    <div class="mountain_b"></div>
-    <div class="house right">
-      <div class="fence"></div>
-      <div class="wall"></div>
-      <div class="roof left"></div>
-      <div class="roof right"></div>
-      <div class="door"></div>
-    </div>
-    <div class="house left">
+  <div class="lefter">
+
+    <div class="title"></div>
+    <div class="house">
       <div class="fence"></div>
       <div class="wall"></div>
       <div class="roof left"></div>
@@ -68,40 +48,14 @@
         <div class="windblade windblade4"></div>
       </div>
     </div>
-    <div class="allsnows">
-      <div class="snow1"></div>
-      <div class="snow2"></div>
-      <div class="snow3"></div>
-      <div class="snow4"></div>
-      <div class="snow5"></div>
-      <div class="snow6"></div>
-      <div class="snow7"></div>
-      <div class="snow8"></div>
-      <div class="snow9"></div>
-      <div class="snow10"></div>
-      <div class="snow11"></div>
-      <div class="snow12"></div>
-      <div class="snow13"></div>
-      <div class="snow14"></div>
-      <div class="snow15"></div>
-      <div class="snow16"></div>
-      <div class="snow17"></div>
-      <div class="snow18"></div>
-      <div class="snow19"></div>
-      <div class="snow20"></div>
-    </div>
-    <div class="ground">
-      <div class="g1"></div>
-      <div class="g2"></div>
-      <div class="g3"></div>
-      <div class="ice">
-        <div class="glare"></div>
-        <div class="ice_shadow"></div>
-      </div>
-      
+
+    <div class="ground"></div>
+
     </div>
 
   </div>
+  <div class="topper"></div>
+  <div class="bottomer"></div>
 </body>
 
 </html>
