--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 
   <html>
 
-<head></head>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+  </head>
 
 <body>
   <div class="lefter">
-
-    <div class="title"></div>
+    <div class="title1">portfolio</div>
     <div class="house">
       <div class="fence"></div>
       <div class="wall"></div>
@@ -48,14 +49,15 @@
         <div class="windblade windblade4"></div>
       </div>
     </div>
-
+    <div class="raindrop"></div>
     <div class="ground"></div>
-
-    </div>
-
   </div>
-  <div class="topper"></div>
-  <div class="bottomer"></div>
+  <div class="topper">
+    <div class="title2">about</div>
+  </div>
+  <div class="bottomer">
+    <div class="title3">contact</div>
+  </div>
 </body>
 
 </html>
